# swagger-plugin-for-sphinx

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
.reuse/: dep5
news/: +9002ce43.change.md  +cf9dc234.feature.md  +e94855a0.removal.md  +eccac86e.fix.md  ced4da0.add.md
sphinx_swagger/: __init__.py  plugin.py
swagger_plugin_for_sphinx/: __init__.py  _openapi_index.py  _plugin.py  full_page_template.j2  inline_template.j2  plugin.py  plugin_directive.j2  swagger.j2
tests/: conftest.py  test_integration.py  test_openapi_index.py  test_plugin.py
tests/test_data/: conf.py  index.rst  openapi.rst  overview.rst
tests/test_data/stores/: petstore.rst
tests/test_data/stores/rockstore/: rockstore.rst
tests/test_data/subfolder/: openapi_subfolder.yml  p1.rst  p2.rst
tests/test_subdirs/: conf.py  index.rst  openapi_main.yml
tests/test_subdirs/specs/petstore/: openapi_specs.yml
tests/test_subdirs/specs/rockstore/: openapi_specs.yml
tests/test_subdirs/stores/: openapi_samedir.yml
tests/test_subdirs/stores/rockstore/specs/: openapi_childdir.yml
